# voicevo

./: .gitignore  Cargo.toml  DSP_EXPLAINER.md  LICENSE  README.md  plan.md  spec.md
src/: cli.rs  config.rs  main.rs  paths.rs  util.rs
src/analysis/: analyzer.rs  fatigue.rs  mod.rs  reading.rs  scale.rs  sustained.rs  sz.rs
src/audio/: capture.rs  devices.rs  exercise.rs  fatigue_exercise.rs  mic_check.rs  mod.rs  playback.rs  recorder.rs  scale_exercise.rs  session.rs  sz_exercise.rs  wav.rs
src/dsp/: activity.rs  contour.rs  cpps.rs  hnr.rs  jitter.rs  mod.rs  mpt.rs  periodicity.rs  pitch.rs  shimmer.rs  voice_breaks.rs  windowing.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  prompt.rs  provider.rs
src/report/: charts.rs  compare.rs  markdown.rs  mod.rs
src/storage/: db.rs  mod.rs  session_data.rs  store.rs
src/tui/: event.rs  mod.rs
src/tui/screens/: conditions.rs  fatigue.rs  mod.rs  recording.rs  scale.rs  sz.rs
src/tui/widgets/: mod.rs  pitch_display.rs  timer.rs  volume_meter.rs  waveform.rs
