[package]
name = "voice-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
cpal = "0.15"
crossterm = "0.28"
hound = "3.5"
indicatif = "0.17"
pitch-detection = "0.3"
plotters = "0.3"
rodio = { version = "0.20", default-features = false, features = ["wav"] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
