[package]
name = "voicevo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
cpal = "0.15"
crossterm = "0.28"
hound = "3.5"
indicatif = "0.17"
pitch-detection = "0.3"
plotters = "0.3"
rodio = { version = "0.20", default-features = false, features = ["wav"] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.34", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
